@@ -1,5 +1,10 @@
 2014-12-07  Mark Wielaard  <mjw@redhat.com>
 
+	* relocate.c (relocate_section): Sanity check section overlap against
+	actually used ehsize, shentsize and phentsize.
+
+2014-12-07  Mark Wielaard  <mjw@redhat.com>
+
 	* offline.c (dwfl_offline_section_address): Assert shndx is not zero.
 	* relocate.c (__libdwfl_relocate_value): Don't relocate against
 	section zero.
